--- a/museum-frontend/src/app/feature-modules/tours/components/edit-tour-form/edit-tour-form.component.css
+++ b/museum-frontend/src/app/feature-modules/tours/components/edit-tour-form/edit-tour-form.component.css
@@ -8,8 +8,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 1001; 
-  background-color: rgba(255, 255, 255, .1); 
+  z-index: 1001;
+  background-color: rgba(255, 255, 255, .1);
   padding: 20px;
   backdrop-filter: blur(15px);
   color: #fff;
@@ -23,7 +23,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1000; 
+  z-index: 1000;
 }
 
 .wrapper {
@@ -102,8 +102,8 @@
 }
 
 .wrapper .btn:hover {
-  background-color: rgb(172, 172, 172); 
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2); 
+  background-color: rgb(172, 172, 172);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   transform: scale(1.03);
   transition: transform 300ms ease;
 }
@@ -214,8 +214,8 @@ img {
 }
 
 .wrapper .submit-btn:hover {
-  background-color: rgb(172, 172, 172); 
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2); 
+  background-color: rgb(172, 172, 172);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   transform: scale(1.03);
   transition: transform 300ms ease;
 }
@@ -245,8 +245,8 @@ img {
 }
 
 .curator-choosing button:hover{
-  background-color: rgb(172, 172, 172); 
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2); 
+  background-color: rgb(172, 172, 172);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   transform: scale(1.03);
   transition: transform 300ms ease;
 }
@@ -261,4 +261,15 @@ img {
 #curator-table {
   margin-left: auto;
   margin-right: auto;
+}
+
+.display-value {
+  padding: 8px 15px;
+  border: 1px solid #ccc;
+  background-color: #f9f9f9;
+  border-radius: 40px;
+  width: 100%;
+  box-sizing: border-box;
+  font-size: 16px;
+  color: #1b1b1b;
 }
