feat: Implement curator and exhibitions choosing

--- a/museum-frontend/src/app/feature-modules/tours/components/edit-tour-form/edit-tour-form.component.html
+++ b/museum-frontend/src/app/feature-modules/tours/components/edit-tour-form/edit-tour-form.component.html
@@ -74,7 +74,7 @@
           <label [class.active]="editTourForm.get('picturePath')?.value || focused === 'picturePath'">Insert image path</label>
         </div>
 
-        <button type="submit" class="submit-btn" [@buttonState]="buttonState" (click)="selectRouteButtonClicked()">Select route</button>
+        <button type="submit" class="submit-btn" [@buttonState]="selectRoutebuttonState" (click)="selectRouteButtonClicked()">Select route</button>
 
         <button type="submit" class="submit-btn" [@buttonState]="selectCuratorbuttonState" (click)="selectCuratorButtonClicked()">Select curator</button>
 
