--- a/museum-frontend/src/app/feature-modules/events/shared-styles.css
+++ b/museum-frontend/src/app/feature-modules/events/shared-styles.css
@@ -105,3 +105,11 @@ label.required::after {
     font-size: large;
     padding: 0.5rem;
 }
+
+.form-container {
+    margin-block: 5rem;
+    margin-inline: 5rem;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    gap: 1rem;
+}
