--- a/museum-frontend/src/app/feature-modules/cleaning/cleaning-report-prompt/cleaning-report-prompt.component.css
+++ b/museum-frontend/src/app/feature-modules/cleaning/cleaning-report-prompt/cleaning-report-prompt.component.css
@@ -4,28 +4,27 @@ prompt {
     display: flex;
     flex-direction: column;
   }
-  
-  .prompt h1 {
-    margin-top: 9%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  
+
+.prompt h1 {
+  margin-top: 2%;
+  margin-left: 32%;
+}
+
   .prompt p {
-    margin-top: 5%;
+    margin-top: 10%;
     margin-left: auto;
     margin-right: auto;
   }
-  
+
   .buttons {
     display: flex;
     justify-content: center;
     flex-direction: row;
-    margin-top: 20%;
+    margin-top: 10%;
     gap: 10%;
     height: auto;
   }
-  
+
   .btn {
     width: 200px;
     height: 40px;
@@ -40,14 +39,14 @@ prompt {
     font-weight: 600;
     margin-top: -3%;
   }
-  
+
   .btn:hover {
     background-color: #f2f2f2;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
     transform: scale(1.03);
     transition: transform 300ms ease;
   }
-  
+
   .modal-overlay {
     position: fixed;
     top: 0;
@@ -56,7 +55,7 @@ prompt {
     height: 100%;
     z-index: 1000;
   }
-  
+
   .modal-container {
     position: fixed;
     top: 50%;
@@ -70,29 +69,29 @@ prompt {
     border: 3px solid rgba(255, 255, 255, .2);
     border-radius: 10px;
   }
-  
+
   .input-box {
-    margin-top: 6%;
+    margin-top: 15%;
     position: relative;
     width: 100%;
     height: 100%;
     border-radius: 40px;
     display: flex;
   }
-  
+
   .input-box textarea {
     width: 100%;
-    height: 100%;
+    height: 150px;
     border-radius: 20px;
     font-size: 16px;
     padding: 3% 5%;
     border: 2px solid #fff;
   }
-  
+
   .input-box textarea::placeholder {
     color: #1b1b1b;
   }
-  
+
   .input-box fa-icon {
     position: absolute;
     right: 20px;
@@ -100,7 +99,7 @@ prompt {
     transform: translateY(-50%);
     font-size: 20px;
   }
-  
+
   .input-box label {
     position: absolute;
     left: 20px;
@@ -110,7 +109,7 @@ prompt {
     color: rgba(0, 0, 0, 0.7);
     pointer-events: none;
   }
-  
+
   .input-box textarea:focus + label,
   .input-box label.active {
     top: -13px;
