feat: Implement personal tour request denial explanation view

--- a/museum-frontend/src/app/feature-modules/tours/components/tour-request-card-view/tour-request-card-view.component.html
+++ b/museum-frontend/src/app/feature-modules/tours/components/tour-request-card-view/tour-request-card-view.component.html
@@ -25,12 +25,22 @@
                   </div>
                 </div>
             </div>
+
             <div class="tour-card-right">
                 <div class="request-status-value"
                      *ngIf="this.user?.role === 'GUEST'"
                 >
                     <strong>Status: </strong> &nbsp; {{ request.status.toString() }}
                 </div>
+
+                <button
+                  class="btn"
+                  *ngIf="user?.role == 'GUEST' && request.status.toString() == 'DECLINED'"
+                  (click)="seeExplanationButtonClicked(request);$event.stopPropagation()"
+                  [@buttonState]="seeExplanationButtonState"
+                >
+                  &nbsp;See denial explanation
+                </button>
 
                 <button
                     class="btn"
