--- a/museum-frontend/src/app/feature-modules/cleaning/decline-cleaning-prompt/decline-cleaning-prompt.component.css
+++ b/museum-frontend/src/app/feature-modules/cleaning/decline-cleaning-prompt/decline-cleaning-prompt.component.css
@@ -1,22 +1,21 @@
 .prompt {
     width: 450px;
-    height: 250px;
+    height: 350px;
     display: flex;
     flex-direction: column;
   }
-  
+
   .prompt h1 {
     margin-top: 9%;
     margin-left: auto;
     margin-right: auto;
   }
-  
+
   .prompt p {
-    margin-top: 5%;
     margin-left: auto;
     margin-right: auto;
   }
-  
+
   .buttons {
     display: flex;
     justify-content: center;
@@ -25,7 +24,7 @@
     gap: 10%;
     height: auto;
   }
-  
+
   .btn {
     width: 150px;
     height: 40px;
@@ -40,33 +39,65 @@
     font-weight: 600;
     margin-top: -3%;
   }
-  
+
   .btn:hover {
-    background-color: #f2f2f2; 
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2); 
+    background-color: #f2f2f2;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
     transform: scale(1.03);
     transition: transform 300ms ease;
   }
-  
+
   .modal-overlay {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 1000; 
+    z-index: 1000;
   }
-  
+
   .modal-container {
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 1001; 
-    background-color: rgba(255, 255, 255, .1); 
+    z-index: 1001;
+    background-color: rgba(255, 255, 255, .1);
     padding: 20px;
     backdrop-filter: blur(15px);
     color: #fff;
     border: 3px solid rgba(255, 255, 255, .2);
     border-radius: 10px;
   }
+
+.input-box label {
+  position: absolute;
+  left: 40px;
+  top: 52%;
+  transform: translateY(-50%);
+  transition: all 0.3s ease;
+  color: rgba(0, 0, 0, 0.7);
+  pointer-events: none;
+}
+
+.input-box textarea:focus + label,
+.input-box label.active {
+  top: 150px;
+  left: 30px;
+  font-size: 13px;
+  color: #fff;
+}
+
+.input-box textarea {
+  width: 100%;
+  height: 100px;
+  border-radius: 20px;
+  font-size: 16px;
+  padding: 3% 5%;
+  border: 2px solid #fff;
+  margin-top: 25px;
+}
+
+.input-box textarea::placeholder {
+  color: #1b1b1b;
+}
