--- a/museum-frontend/src/app/feature-modules/items/artifacts/artifacts.component.css
+++ b/museum-frontend/src/app/feature-modules/items/artifacts/artifacts.component.css
@@ -4,10 +4,10 @@
   background-size: cover;
   transition: background-size 0.3s ease;
 }
-  
+
 .btn {
-  width: 10rem;
-  height: 5rem;
+  width: 12rem;
+  height: 3.4rem;
   background: #fff;
   border: none;
   outline: none;
@@ -18,13 +18,12 @@
   color: #333;
   font-weight: 600;
   margin-top: 5%;
-  margin-left: 80%;
   margin-bottom: 2%;
 }
-  
+
 .btn:hover {
-  background-color: #f2f2f2; 
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2); 
+  background-color: #f2f2f2;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   transform: scale(1.03);
   transition: transform 300ms ease;
 }
@@ -32,21 +31,90 @@
 .card-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center; 
-  gap: 20px; 
+  justify-content: center;
+  gap: 20px;
+  margin-top: 1.5%;
 }
 
 .card {
-  width: calc(25% - 20px); 
-  margin-right: 20px; 
-  margin-bottom: 20px; 
+  width: calc(25% - 20px);
+  margin-right: 20px;
+  margin-bottom: 20px;
 }
-  
+
 .row {
-  width: 100%; 
+  width: 100%;
   display: flex;
   justify-content: flex-start;
   margin-bottom: 20px;
   margin-left: 12rem;
 }
-    
+
+.overlay-up {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  gap: 10px;
+  margin-top: 1%;
+}
+
+.search {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  gap: 30px;
+  margin-left: 7%;
+}
+
+.input-box {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 40px;
+  display: flex;
+}
+
+.input-box input {
+  width: 20rem;
+  height: 50px;
+  border-radius: 40px;
+  font-size: 16px;
+  padding: 2% 5%;
+  border: 2px solid rgba(0, 0, 0, 0.7);
+  margin-left: 20%;
+  margin-top: 4%;
+}
+
+.input-box input::placeholder {
+  color: #1b1b1b;
+}
+
+.input-box fa-icon {
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 20px;
+}
+
+.input-box label {
+  position: absolute;
+  left: 95px;
+  top: 60%;
+  transform: translateY(-50%);
+  transition: all 0.3s ease;
+  color: rgba(0, 0, 0, 0.7);
+  pointer-events: none;
+}
+
+.input-box input:focus + label,
+.input-box label.active {
+  top: 2px;
+  left: 80px;
+  font-size: 13px;
+  color: rgba(0, 0, 0, 0.7);
+}
+
+.add-item {
+  margin-left: 45%;
+}
