--- a/museum-frontend/src/app/feature-modules/items/artifacts/artifacts.component.html
+++ b/museum-frontend/src/app/feature-modules/items/artifacts/artifacts.component.html
@@ -1,19 +1,44 @@
 <div class="overlay">
-    <button 
-              type="submit" 
-              class="btn" 
-              (click)="addItemButtonClicked()"
-              [@buttonState]="addItemButtonState"
-              >+ Add item
-    </button>
-    <div class="card-container">
-        <div class="row" *ngFor="let row of slicedItems">
-            <app-artifact-card class="card"
+  <div class="overlay-up">
+
+    <div class="search">
+      <div class="input-box" [formGroup]="searchItemForm">
+        <input
+          type="text"
+          formControlName="name"
+          required
+        />
+        <label [class.active]="searchItemForm.get('name')?.value || focused === 'name'">Search by item name</label>
+      </div>
+
+      <button
+        type="submit"
+        class="btn"
+        (click)="searchButtonClicked()"
+        [@buttonState]="searchButtonState"
+      >Search
+      </button>
+    </div>
+
+    <div class="add-item">
+      <button
+        type="submit"
+        class="btn"
+        (click)="addItemButtonClicked()"
+        [@buttonState]="addItemButtonState"
+      >+ Add item
+      </button>
+    </div>
+  </div>
+
+  <div class="card-container">
+    <div class="row" *ngFor="let row of slicedItems">
+      <app-artifact-card class="card"
             *ngFor="let item of row"
             [item]="item">
-            </app-artifact-card>
-        </div>
+      </app-artifact-card>
     </div>
-      
+  </div>
+
 </div>
-  
+
