--- a/museum-frontend/src/app/feature-modules/items/put-artifact-into-room-prompt/put-artifact-into-room-prompt.component.html
+++ b/museum-frontend/src/app/feature-modules/items/put-artifact-into-room-prompt/put-artifact-into-room-prompt.component.html
@@ -1,1 +1,22 @@
-<p>put-artifact-into-room-prompt works!</p>
+<div class="modal-overlay" (click)="overviewClicked()"></div>
+<div class="modal-container">
+  <div class="prompt" >
+    <h1>Put item into room</h1>
+    <button type="submit"  [@buttonState]="selectRoombuttonState" (click)="selectRoomButtonClicked()">Select room</button>
+
+    <div class="buttons">
+      <button type="submit" 
+              class="btn"
+              (click)="putToRoomButtonClicked()"
+              [@buttonState]="acceptButtonState" 
+              >Put
+      </button>
+      <button type="submit" 
+              class="btn"
+              (click)="cancelButtonClicked()"
+              [@buttonState]="cancelButtonState" 
+              >Cancel
+      </button>
+    </div>
+  </div>
+</div>
