style: Change typos

--- a/museum-frontend/src/app/feature-modules/items/edit-artifact/edit-artifact.component.html
+++ b/museum-frontend/src/app/feature-modules/items/edit-artifact/edit-artifact.component.html
@@ -77,10 +77,10 @@
                   <option value="Pottery">Pottery</option>
                   <option value="Jewelry">Jewelry</option>
           </select>
-          <label>Select catrgory</label>
+          <label>Select category</label>
         </div>
 
-        <button type="submit" class="submit-btn" [@buttonState]="buttonState" (click)="editItemButtonClicked()">Add</button>
+        <button type="submit" class="submit-btn" [@buttonState]="buttonState" (click)="editItemButtonClicked()">Edit</button>
     </form>
   </div>
 </div>
