Inviting curators to events

--- a/museum-frontend/src/app/feature-modules/events/shared-styles.css
+++ b/museum-frontend/src/app/feature-modules/events/shared-styles.css
@@ -97,7 +97,7 @@ label.required::after {
     color: rgb(200, 0, 0);
 }
 
-.form button {
+button {
     border-radius: 0.5rem;
     border: 0;
     color: white;
