--- a/museum-frontend/src/app/feature-modules/events/declination-explanation/declination-explanation.component.html
+++ b/museum-frontend/src/app/feature-modules/events/declination-explanation/declination-explanation.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="explanationForm" (ngSubmit)="onSubmit()">
     <div class="wrapper">
         <input placeholder="Explanation" id="explanation" formControlName="explanation" autocomplete="off">
-        <button [disabled]="explanationForm.invalid">Invite</button>
+        <button [disabled]="explanationForm.invalid">Submit</button>
     </div>
     <div class="errors" *ngIf="explanationForm.controls['explanation'].dirty">
         <p *ngIf="explanationForm.invalid">This field is required.</p>
