feat: display of report for cleanings for all items

--- a/museum-frontend/src/app/feature-modules/cleaning/items-cleaning-view/items-cleaning-view.component.html
+++ b/museum-frontend/src/app/feature-modules/cleaning/items-cleaning-view/items-cleaning-view.component.html
@@ -1,5 +1,7 @@
 <div class="overlay">
 <h1>Items for cleaning</h1>
+<button class="btn" (click)="seeReportAllButtonClick()">Report on all cleanings</button>
+<button class="btn" (click)="seeReportMyButtonClick()">Report on my cleanings</button>
 <table>
     <thead>
       <tr>
