--- a/museum-frontend/src/app/feature-modules/cleaning/items-cleaning-view/items-cleaning-view.component.css
+++ b/museum-frontend/src/app/feature-modules/cleaning/items-cleaning-view/items-cleaning-view.component.css
@@ -91,3 +91,28 @@ h1 {
 p {
   margin-top: 10%;
 }
+
+.btn {
+  width: 15rem;
+  height: 3.4rem;
+  background: #fff;
+  border: none;
+  outline: none;
+  border-radius: 40px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+  cursor: pointer;
+  font-size: 16px;
+  color: #333;
+  font-weight: 600;
+  margin-top: 5%;
+  margin-bottom: 2%;
+  float: right; /* Align button to the right */
+  
+}
+
+.btn:hover {
+  background-color: #f2f2f2;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  transform: scale(1.03);
+  transition: transform 300ms ease;
+}
