style: Change pdf report prompt style

--- a/museum-frontend/src/app/feature-modules/tours/components/tour-requests-view/tour-requests-view.component.css
+++ b/museum-frontend/src/app/feature-modules/tours/components/tour-requests-view/tour-requests-view.component.css
@@ -583,8 +583,8 @@ input[type="range"] {
 }
 
 .btn:hover {
-  background-color: #f2f2f2; 
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2); 
+  background-color: #f2f2f2;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   transform: scale(1.03);
   transition: transform 300ms ease;
 }
@@ -658,8 +658,32 @@ h2 {
 }
 
 .add-tour-btn:hover {
-  background-color: #f2f2f2; 
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2); 
+  background-color: #f2f2f2;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  transform: scale(1.03);
+  transition: transform 300ms ease;
+}
+
+.report-btn {
+  width: 300px;
+  height: 40px;
+  background: #fff;
+  border: none;
+  outline: none;
+  border-radius: 40px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+  cursor: pointer;
+  font-size: 16px;
+  color: #333;
+  font-weight: 600;
+  margin-left: 71.5%;
+  margin-top: 1%;
+  margin-bottom: 0.5%;
+}
+
+.report-btn:hover {
+  background-color: #f2f2f2;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   transform: scale(1.03);
   transition: transform 300ms ease;
 }
