--- a/museum-frontend/src/app/feature-modules/tours/components/tour-requests-view/tour-requests-view.component.html
+++ b/museum-frontend/src/app/feature-modules/tours/components/tour-requests-view/tour-requests-view.component.html
@@ -23,7 +23,7 @@
 
   <button *ngIf="user?.role === 'ORGANIZER'"
           type="submit"
-          class="add-tour-btn"
+          class="report-btn"
           (click)="openHandledRequestsReportDialogue()"
           [@buttonState]="tourRequestsButtonState">
     <fa-icon [icon]="faPlus" />
@@ -31,7 +31,7 @@
   </button>
   <button *ngIf="user?.role === 'ORGANIZER'"
           type="submit"
-          class="add-tour-btn"
+          class="report-btn"
           (click)="openRequestsReportDialogue()"
           [@buttonState]="requestsReportButtonState">
     <fa-icon [icon]="faPlus" />
