fix: Implement tour prices calculation via number of exhibitions

--- a/museum-frontend/src/app/feature-modules/tours/components/accept-request-form/accept-request-form.component.html
+++ b/museum-frontend/src/app/feature-modules/tours/components/accept-request-form/accept-request-form.component.html
@@ -7,13 +7,13 @@
       <div class="input-box">
         <label [class.active]="true">Adult Ticket Price</label>
         <div class="display-value">
-          {{ this.tourPricelist?.adultTicketPrice }}
+          {{ this.adultTicketPrice }}
         </div>
       </div>
       <div class="input-box">
         <label [class.active]="true">Minor Ticket Price</label>
         <div class="display-value">
-          {{ this.tourPricelist?.minorTicketPrice }}
+          {{ this.minorTicketPrice }}
         </div>
       </div>
     </div>
