--- a/museum-frontend/src/app/feature-modules/tours/components/add-tour-form/add-tour-form.component.html
+++ b/museum-frontend/src/app/feature-modules/tours/components/add-tour-form/add-tour-form.component.html
@@ -52,13 +52,13 @@
         <div class="ticket-prices">
             <div class="input-box">
               <div class="display-value">
-                {{ this.tourPricelist?.adultTicketPrice }}
+                {{ this.adultTicketPrice }}
               </div>
               <label [class.active]="true">Adult Ticket Price</label>
             </div>
             <div class="input-box">
               <div class="display-value">
-                {{ this.tourPricelist?.minorTicketPrice }}
+                {{ this.minorTicketPrice }}
               </div>
               <label [class.active]="true">Minor Ticket Price</label>
             </div>
