--- a/museum-frontend/src/app/feature-modules/tours/components/add-tour-request-form/add-tour-request-form.component.css
+++ b/museum-frontend/src/app/feature-modules/tours/components/add-tour-request-form/add-tour-request-form.component.css
@@ -1,6 +1,6 @@
 .dialogue {
   width: 30rem;
-  height: 32rem;
+  height: 35rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -171,4 +171,22 @@
 
 #date-time-label {
   align-self: center;
+}
+
+.ticket-prices {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+}
+
+.display-value {
+  padding: 8px 15px;
+  border: 1px solid #ccc;
+  background-color: #f9f9f9;
+  border-radius: 40px;
+  width: 100%;
+  box-sizing: border-box;
+  font-size: 16px;
+  color: #1b1b1b;
 }
