--- a/museum-frontend/src/app/feature-modules/tours/components/pdf-requests-prompt/pdf-requests-prompt.component.html
+++ b/museum-frontend/src/app/feature-modules/tours/components/pdf-requests-prompt/pdf-requests-prompt.component.html
@@ -1,7 +1,7 @@
 <div class="modal-overlay" (click)="overviewClicked()"></div>
 <div class="modal-container">
   <div class="prompt" >
-    <h1>Report on all cleanings in past month</h1>
+    <h1>Report on total handled Personal Tour Requests last month</h1>
     <div>
       <iframe [src]="pdfUrl" width="650px" height="750px"></iframe>
     </div>
