feat: Implement tour category

--- a/museum-frontend/src/app/feature-modules/tours/components/edit-tour-form/edit-tour-form.component.html
+++ b/museum-frontend/src/app/feature-modules/tours/components/edit-tour-form/edit-tour-form.component.html
@@ -64,6 +64,24 @@
         </div>
       </div>
 
+      <div class="input-box">
+        <select formControlName="category" required>
+          <option value="ART_COLLECTIONS">Art Collections</option>
+          <option value="HISTORICAL_EXHIBITS">Historical Exhibits</option>
+          <option value="SCIENCE_AND_TECHNOLOGY">Science and Technology</option>
+          <option value="CULTURAL_HERITAGE">Cultural Heritage</option>
+          <option value="ANCIENT_ART">Ancient Art</option>
+          <option value="EUROPEAN_PAINTINGS">European Paintings and Sculptures</option>
+          <option value="MODERN_ART">Modern Art</option>
+          <option value="AMERICAN_ART">American Art</option>
+          <option value="ASIAN_ART">Asian Art</option>
+          <option value="AFRICAN_CULTURE">African Culture</option>
+          <option value="ISLAMIC_ART">Islamic Art</option>
+          <option value="COSTUME_INSTITUTE">Costume Institute</option>
+          <option value="ARMS_AND_ARMOR">Arms and Armor</option>
+        </select>
+        <label>Select category</label>
+      </div>
 
       <div class="input-box">
           <input
