--- a/museum-frontend/src/app/feature-modules/tours/components/tour-card-view/tour-card-view.component.html
+++ b/museum-frontend/src/app/feature-modules/tours/components/tour-card-view/tour-card-view.component.html
@@ -49,6 +49,11 @@
                         <strong>Duration: </strong> {{ tour.duration }} minutes
                     </div>
                 </div>
+                <div class="tour-capacity">
+                  <div class="tour-capacity-value">
+                    <strong>Category: </strong> {{ tour.category }}
+                  </div>
+                </div>
             </div>
             <div class="tour-card-right">
                 <div class="tour-price">
